# ActiStruct

./: .gitattributes  .gitignore  ActiStruct_supporting_results.docx  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_OVERVIEW.md  README.md  SECURITY.md  apply_fix2.py  bulk_cu_qe_active_inverse.py  bulk_licoo2_qe_active_inverse.py  bulk_lifepo4_qe_active_inverse.py  bulk_mgo_qe_active_inverse.py  bulk_si_qe_active_inverse.py  ch4_qe_active_inverse.py  cu2_dimer.py  environment.yml  graphene_qe_active_inverse.py  h2_dimer.py  h2_qe_active_inverse.py  h2o_qe_active_inverse.py  h_cu111_qe_active_inverse.py  inverse_active_codex_spec_v2.md  paper.bib  paper.md  pyproject.toml  qe_active_inverse_common.py  requirements.txt  run.sh
actistruct/: __init__.py
analysis/: DIRECT_GRID_VALIDATION.md  compare_grid_validation.py  compute_statistics.py  direct_grid_validation.py  dry_run_live_candidate_selector_v072.py  extract_all_results.py  failure_aware_acquisition_demo.py  failure_aware_gp_acquisition_v04.py  generate_figures.py  generate_manuscript_draft.py  generate_si.py  generate_tables.py  grid_search_simulation.py  preflight_check.py  publication_data.py  qe_reliability_generalization_fix.py  run_direct_grid_validations.sh  run_grid_cu.py  run_grid_licoo2.py  run_grid_mos2.py  simulated_failure_aware_al_benchmark_v05.py  simulated_failure_aware_al_benchmark_v051.py  summarize_qe_reliability_records.py  train_qe_reliability_classifier.py
data/: dry_run_live_candidates_v072.csv  failure_aware_acquisition_demo.csv  failure_aware_gp_acquisition_v04.csv  failure_aware_gp_acquisition_v041.csv  qe_reliability_group_split_predictions_v031.csv  qe_reliability_ml_table.csv  qe_reliability_predictions_v02.csv  qe_reliability_predictions_v03.csv  simulated_failure_aware_al_benchmark_v05.csv  simulated_failure_aware_al_benchmark_v051.csv
docs/: model_and_tests.md  public_dataset_connectors.md  qe_reliability_parser.md  qe_setup.md  reliability_aware_quickstart_v063.md  repository_guide.md
examples/: reliability_aware_quickstart.py
generated_models/: __init__.py  aln_2d_qe_active_inverse.py  bulk_ag_qe_active_inverse.py  bulk_al2o3_qe_active_inverse.py  bulk_al_qe_active_inverse.py  bulk_alas_qe_active_inverse.py  bulk_au_qe_active_inverse.py  bulk_batio3_qe_active_inverse.py  bulk_cao_qe_active_inverse.py  bulk_co2feal_qe_active_inverse.py  bulk_cspbi3_qe_active_inverse.py  bulk_fe_bcc_qe_active_inverse.py  (+45 more)
(+151 files in other folders)
