[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "actistruct"
version = "0.7.2"
description = "Reliability-aware active-learning workflow for DFT-guided materials discovery with QE parsing, uncertainty-aware GP/LCB ranking, and failure-risk triage."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Md. Rifat Khandaker"}]
keywords = [
  "inverse-design",
  "active-learning",
  "dft",
  "quantum-espresso",
  "ase",
  "gaussian-process",
  "bayesian-optimization",
  "materials-science",
  "atomistic-simulation",
  "structure-optimization",
  "reliability-aware-al",
  "failure-risk-triage",
  "uncertainty-aware-ranking",
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "scikit-learn",
  "ase",
  "pillow",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/Rifat19R/ActiStruct"
Repository = "https://github.com/Rifat19R/ActiStruct"
Issues = "https://github.com/Rifat19R/ActiStruct/issues"

[tool.setuptools]
py-modules = ["qe_active_inverse_common"]
packages = ["actistruct", "actistruct.acquisition", "actistruct.datasets", "actistruct.parsers", "generated_models"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
